@@ -4702,4 +4702,6 @@ a)"xI
 /()\Q\E*]/B,auto_callout
     a[bc]d
 
+/\x8a+f|;T?(*:;.'?`(\xeap ){![^()!y*''C*(?';]{1;(\x08)/B,alt_verbnames,dupnames,extended
+
 # End of testinput2 
